lab1/Test/L1-A-12-37.output
Error Type B at Line 1
Error Type B at Line 8
Error Type B at Line 16
Error Type A at Line 19
Error Type B at Line 40
Error Type A at Line 52
Error Type A at Line 55
Error Type B at Line 68
