lab1/Test/L1-A-12-37.cmm
int oXbPdZol ( float eVRRkiEL 1269085736 ] ) {
  struct dBCsZMkb0Sr rB_D = X3opIq5vENcD_X1N = vSS9mVA_jX 
    + d * nCUI0HUIMig ( D = RJUCHD = rB_LuDZZM9HdiEa1cQl 
    || Yg54Ueo699Vtkl41N_ && ZX4xpFqkdDBC54o8 > cH7dJYHo31dvd0FCh 
    / ce5AINkJIXjYA6e [ qj5o1BBL < f56ZSNuNcAN2v2o / Z2sifrRACh3qpHztJq 
    ( oIF9po , ZeWf2ut9nZUz && s9PA61V4T23ez3fe35v <= 
    ( UR >= ex52TmTPLOJMyjewWDh0 != ! 1688049033.1234780825 
    / - ! 768179506 ) ) == - - - ELztfod ( ) . ] ) - - 
    ! w ;
}
int bGIeIXw0E9_BJ7U 
;
struct {
  int VChIAfgIs8qXUM8OeV ;
  int zTe_WJ 
  int Qnfxt4r ;
  int zl8zEPjn ;
  int jUhNAHJbzTm9wH ;
  struct #{
    int Ey5Gw5XfEImK7T8g0qH ;
    struct rPm {
      int aAJXqn ;
      int cuIRt9LswHXQaNjSdR ;
    }wJGcgYfKCVM6AKvK ;
    struct {
      int KEtMO_n6CButVJyqwcgO ;
      int xUVh4Z ;
    }r_Txz4Jii_C9 ;
  }ZjbQ6wU ;
  int h_FwtkaJdMrUGY , VgLP6SHB0CNkluKuKn0x ;
};
int ;
int Xezs7US8lg76V , aag9NDN_PrkB 

;
int ;
int ;
int ;
int 
int goan9sD ( ) {
  while ( HNbERP7npFFy70jmj )   return HtaFw8qYcgilPCsV1 
    ;

}
int POIiPSh3UUmi7S8w6 ( int I0eqys4lgHn62S_SSHB , 
  int b ) {
{
    gAMOfghWq4P ;
    sCPnFV4 ;
    fWIhVqrxC ;
    if ( IWcDlATisjQ )     BgzAcKV ;
else     if ( j5WHr15RX3dwLoPS5x8 ) $    NkeiPW ;


    if ( Y2 )     if ( a )     zHpW0O #;
else     MNiG51fJpVZvo ;

else {
      K_WIso16U8st2RbyOKx ;
    }
  }}
int ;
int jT81Jhuoh7J ( ) {
  if ( q )   UXID3FMak66mKqNPwEf ;

}
int ;
;
